Tests for all routes
